--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ mei-chat-customer .msg_history {
 	width: 100%;
 	height: 310px;
     background: #fafafa;
-    overflow-y: scroll;
+    overflow-y: overlay;
 }
 mei-chat-customer .msg_type {
 	width: 100%;
@@ -153,7 +153,7 @@ mei-chat-customer .sent_msg {
 }
 mei-chat-customer ::-webkit-scrollbar-thumb {
 	background: rgb(207, 207, 207);
-	border-radius: 10px;
+	border-radius: 8px;
 }
 
 mei-chat-customer .tab-chosen {
