--- a/style.css
+++ b/style.css
@@ -54,9 +54,7 @@ mei-chat-customer .msg_type {
 	width: 100%;
 	height: 60px;
 	box-shadow: 0 0px 50px rgba(0,0,0,0.13);
-	background: #fff;
-	border-bottom-left-radius: 5px;
-	border-bottom-right-radius: 5px;
+	background: #ffffff;
 	position: relative;
 }
 mei-chat-customer .input_msg_write {
@@ -72,6 +70,8 @@ mei-chat-customer .input_msg_write input {
     min-height: 48px;
     width: 100%;
     height: 100%;
+    border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
 }
 mei-chat-customer .input_msg_write input:focus {
 	outline: none;
