--- a/style.css
+++ b/style.css
@@ -194,3 +194,10 @@ mei-chat-customer #viewimg img {
     max-width: 100%;
     max-height: 100%;
 }
+mei-chat-customer .bell {
+    position: absolute;
+    color: white;
+    font-size: 25px;
+    top: 15%;
+    left: 30%;
+}
