--- a/style.css
+++ b/style.css
@@ -202,7 +202,8 @@ mei-chat-customer .bell {
     left: 30%;
 }
 mei-chat-customer .bell-header {
-    position: none;
+    position: unset;
     display: table-cell;
     vertical-align: middle;
+    width: 30px;
 }
